lib_LTLIBRARIES = libgoogleapis.la
 
libgoogleapis_la_SOURCES = \
    callback.cc     \
    once.cc         \
    stringprintf.cc \
    strtoint.cc     \
    callback.h	    \
    mutex.h         \
    strtoint.h      \
    callback-specializations.h \
    once.h          \
    template_util.h \
    callback-types.h        \
    port.h		    \
    thread_annotations.h    \
    int128.h		    \
    scoped_ptr.h	    \
    type_traits.h           \
    integral_types.h	    \
    scoped_ptr_internals.h  \
    windows_compatability.h \
    macros.h		    \
    stringprintf.h


libgoogleapis_la_CPPFLAGS = \
    -I$(top_srcdir) \
    $(libglog_CFLAGS)
